[gd_scene load_steps=4 format=3 uid="uid://ry2u1lm3nnr"]

[ext_resource type="Theme" uid="uid://d0bl6jabh3mof" path="res://Interface/TownInterface/TownInterfaceTheme.tres" id="1_a676i"]
[ext_resource type="Script" uid="uid://bm70t7ro5aib3" path="res://Interface/TownInterface/TownBuildingMenuItem.gd" id="2_15xeg"]
[ext_resource type="Script" uid="uid://bn22qne7p8gp8" path="res://Interface/GlobalInterface/Field/ReactiveTextField.gd" id="3_7v8kj"]

[node name="TownBuildingMenuItem" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("1_a676i")
script = ExtResource("2_15xeg")
__linked_class = &"Building"
__linked_property = &""

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="BuildingName" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
script = ExtResource("3_7v8kj")
__test_value = ""
__linked_class = &"Building"
__linked_property = &"building_name"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"BuildingDescription"

[node name="BuildingDescription" type="Label" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(320, 80)
layout_mode = 2
autowrap_mode = 3
script = ExtResource("3_7v8kj")
__test_value = ""
__linked_class = &"Building"
__linked_property = &"building_description"

[node name="EnterBuilding" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Enter"
